# MarketMind

./: .gitignore  README.md  requirements.txt
backend/: crew.py  llm.py  main.py  pyproject.toml  schemas.py  seed_demo.py  store.py  synthesize.py  vector_store.py
backend/config/: agents.yaml  tasks.yaml
backend/reports/: hallucination_report.md  report.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css  theme.js
frontend/src/components/: AgentPipeline.jsx  AnimatedBg.jsx  Dashboard.jsx  HallucinationReport.jsx  HistoryPanel.jsx  LivePipeline.jsx  ReportViewer.jsx  WaitingGame.jsx  ui.jsx
frontend/src/components/dashboard/: CompetitorSection.jsx  FinancialSection.jsx  MarketSection.jsx  Reliability.jsx  Scorecard.jsx  SegmentSection.jsx  StrategySection.jsx  SwotGtmRisk.jsx
frontend/src/hooks/: useJob.js
landing/: index.html  script.js  styles.css
