[project]
name = "market_research_crew"
version = "0.1.0"
description = "market-research-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
    "fastapi>=0.135.1",
    "groq>=1.0.0",
    "litellm>=1.75.3",
    "selenium>=4.41.0",
    "uvicorn>=0.41.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
market_research_crew = "market_research_crew.main:run"
run_crew = "market_research_crew.main:run"
train = "market_research_crew.main:train"
replay = "market_research_crew.main:replay"
test = "market_research_crew.main:test"
run_with_trigger = "market_research_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
